--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "start": "node index.js"
     },
     "dependencies": {
-        "@whiskeysockets/baileys": "^6.7.9",
+        "@whiskeysockets/baileys": "github:seiren-primrose/PL-Baileys",
         "axios": "^1.6.0",
         "body-parser": "^1.20.3",
          "fs": "latest",
